Fix missing spell check bar

Summary:
- the spell check bar removes itself from the bottom view bar,
  now is added again when required

BUG: 359682

Test Plan:
- write a text with spelling errors
- run the spell check, ignore errors
- run the spell check again, with the bar widget correctly
  showing up now

Reviewers: #ktexteditor, dhaumann

Reviewed By: #ktexteditor, dhaumann

Subscribers: dhaumann, #frameworks

Tags: #kate, #frameworks

Differential Revision: https://phabricator.kde.org/D8148